tests/ui/unit_struct.rs
#[derive_where::derive_where(Clone)]
struct Test();

fn main() {}
